fix: Adjust minute markers visibility in desktop layout

--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,7 @@ body {
 
 
 /* Desktop horizontal markers */
-@media (min-width: 1440) {
+@media (min-width: 1440px) {
     .timeline .hour-marker {
         position: absolute;
         height: 100%;
@@ -264,7 +264,7 @@ body {
 
     .timeline .minute-marker {
         position: absolute;
-        height: 40%;
+        height: 25%;
         bottom: 0;
         border-left: 1px solid #ddd;
         width: 1px;
